@@ -7,6 +7,7 @@ require 'mini_profiler/sql_timer_struct'
 require 'mini_profiler/client_timer_struct'
 require 'mini_profiler/request_timer_struct'
 require 'mini_profiler/storage/abstract_store'
+require 'mini_profiler/storage/memcache_store'
 require 'mini_profiler/storage/memory_store'
 require 'mini_profiler/storage/redis_store'
 require 'mini_profiler/storage/file_store'
